@@ -16,6 +16,7 @@ import org.cardanofoundation.signify.generated.keria.model.AidRecord;
 import org.cardanofoundation.signify.generated.keria.model.GroupMember;
 import org.cardanofoundation.signify.generated.keria.model.Identifier;
 import org.cardanofoundation.signify.generated.keria.model.KeyStateRecord;
+import org.cardanofoundation.signify.generated.keria.model.OOBI;
 import org.junit.jupiter.api.*;
 
 import java.util.*;
@@ -36,7 +37,7 @@ public class MultisigJoinTest extends BaseIntegrationTest {
     static String nameMember3 = "member3";
     static String nameMultisig = "multisigGroup";
     static String oobi1, oobi2, oobi3, oobiMultisig;
-    private static Map<String, Object> oobiGetMultisig;
+    private static OOBI oobiGetMultisig;
 
     @BeforeAll
     public static void getClients() throws Exception {
@@ -48,7 +49,7 @@ public class MultisigJoinTest extends BaseIntegrationTest {
         createAID(client1, nameMember1, new ArrayList<>());
         createAID(client2, nameMember2, new ArrayList<>());
 
-        List<Object> oobis = getOobisAsync(
+        List<OOBI> oobis = getOobisAsync(
             new GetOobisArgs(client1, nameMember1, "agent"),
             new GetOobisArgs(client2, nameMember2, "agent")
         );
@@ -168,8 +169,7 @@ public class MultisigJoinTest extends BaseIntegrationTest {
         EventResult endRoleOperation1 = client1.identifiers().addEndRole(nameMultisig, "agent", eid1, null);
         EventResult endRoleOperation2 = client2.identifiers().addEndRole(nameMultisig, "agent", eid2, null);
 
-        oobiGetMultisig = new LinkedHashMap<>();
-        oobiGetMultisig = (Map<String, Object>) client1.oobis().get(nameMultisig, "agent").get();
+        oobiGetMultisig = client1.oobis().get(nameMultisig, "agent").get();
 
         waitOperationAsync(
             new WaitOperationArgs(client1, endRoleOperation1.op()),
@@ -184,14 +184,14 @@ public class MultisigJoinTest extends BaseIntegrationTest {
 
         aid3 = createAID(client3, nameMember3, new ArrayList<>());
 
-        List<Object> oobis = getOobisAsync(
+        List<OOBI> oobis = getOobisAsync(
             new GetOobisArgs(client1, nameMember1, "agent"),
             new GetOobisArgs(client2, nameMember2, "agent"),
             new GetOobisArgs(client3, nameMember3, "agent")
         );
 
-        oobi3 = getOobisIndexAt0(oobis.get(2));
-        oobiMultisig = getOobisIndexAt0(oobiGetMultisig);
+        oobi3 = oobis.get(2).getOobis().getFirst();
+        oobiMultisig = oobiGetMultisig.getOobis().getFirst();
 
         resolveOobisAsync(
             new ResolveOobisArgs(client1, oobi3, nameMember3),
@@ -445,9 +445,7 @@ public class MultisigJoinTest extends BaseIntegrationTest {
         return client.identifiers().get(name).get();
     }
 
-    public static String getOobisIndexAt0(Object oobi) {
-        Map<String, Object> oobiBody = Utils.toMap(oobi);
-        ArrayList<String> oobisResponse = (ArrayList<String>) oobiBody.get("oobis");
-        return oobisResponse.getFirst();
+    public static String getOobisIndexAt0(OOBI oobi) {
+        return oobi.getOobis().get(0);
     }
 }
